Impement controller which is support swagger
