# ec2/src/main/java/com/tw/dddsample/interfaces/controller/InstancesController.java
@@ -1,19 +1,18 @@
 package com.tw.dddsample.interfaces.controller;
 
-import com.google.gson.GsonBuilder;
 import com.tw.dddsample.application.InstanceService;
 import com.tw.dddsample.domain.Instance;
 import com.tw.dddsample.domain.InstanceRepository;
+import com.tw.dddsample.interfaces.controller.assembler.InstanceAssembler;
 import io.swagger.api.InstancesApiDelegate;
-import io.swagger.model.InlineResponse200;
-import io.swagger.model.InlineResponse202;
-import io.swagger.model.NewServiceRequest;
+import io.swagger.model.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
-import org.springframework.web.bind.annotation.*;
 
-//TODO move to infrastructure
+import java.util.List;
+
 @Component
 public class InstancesController implements InstancesApiDelegate {
 
@@ -22,35 +21,45 @@ public class InstancesController implements InstancesApiDelegate {
     @Autowired
     private InstanceRepository instanceRepository;
 
-//    @RequestMapping(path = "/instances", method = RequestMethod.POST)
-//    @ResponseBody
-//    public String createInstance(@RequestBody RequestParamWrapper requestParamWrapper) {
-//        //TODO rename RequestParamWrapper
-//        Instance instance = new InstanceAssembler(requestParamWrapper.get()).assembleInstance();
-//        instanceService.createInstance(instance);
-//        //TODO refactor to viewresolver
-//        return new GsonBuilder().create().toJson(instance);
-//    }
-//
-//    @RequestMapping(path = "/instances", method = RequestMethod.GET)
-//    @ResponseBody
-//    public String findInstances() {
-//        return new GsonBuilder().create().toJson(instanceRepository.findAll());
-//    }
+    private InstanceAssembler instanceAssembler = new InstanceAssembler();
+
+
+    @Override
+    public ResponseEntity<InlineResponse202> instancesPost(String contentType, String accept, NewServiceRequest body) {
+        Instance createdInstance = instanceService.createInstance(new InstanceAssembler().fromDTO(body));
+
+        io.swagger.model.Instance instance = instanceAssembler.toDTO(createdInstance);
+        InlineResponse202 response = new InlineResponse202()
+                .data(new AsynchronousNewInstanceResponse()
+                        .id(instance.getId())
+                        .attributes(new AsynchronousnewinstanceresponseAttributes()
+                                .addResultsItem(new AsynchronousnewinstanceresponseAttributesResults()
+                                        .instanceId(instance.getId())
+                                )
+                        )
+                );
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
 
     @Override
     public ResponseEntity<InlineResponse200> instancesGet(String contentType, String accept, String xRegion) {
-        //TODO:
-        return null;
+        List<Instance> allInstance = instanceRepository.findAll();
+
+        return new ResponseEntity<>(new InlineResponse200().data(instanceAssembler.toDTOs(allInstance)), HttpStatus.OK);
     }
 
 
-    @RequestMapping(path = "/instances/{instanceId}/action", method = RequestMethod.PUT)
-    @ResponseBody
-    public String operateInstances(@RequestParam String action, @PathVariable String instanceId) {
-        Instance instance = instanceRepository.find(instanceId);
-        Instance executedInstance = InstanceOperation.valueOf(action).execute(instanceService, instance);
-        return new GsonBuilder().create().toJson(instance);
+    @Override
+    public ResponseEntity<InlineResponse200> instancesInstanceIdActionPut(String instanceId, String contentType, String accept, String action) {
+        Instance instance1 = instanceRepository.find(instanceId);
+        Instance executedInstance = InstanceOperation.valueOf(action).execute(instanceService, instance1);
+
+        io.swagger.model.Instance instance = instanceAssembler.toDTO(executedInstance);
+        InlineResponse200 response200 = new InlineResponse200();
+        response200.addDataItem(instance);
+
+        return new ResponseEntity<>(response200, HttpStatus.OK);
     }
 
     private enum InstanceOperation {
@@ -77,11 +86,5 @@ public class InstancesController implements InstancesApiDelegate {
 
         public abstract Instance execute(InstanceService instanceService, Instance instance);
 
-    }
-
-    @Override
-    public ResponseEntity<InlineResponse202> instancesPost(String contentType, String accept, NewServiceRequest body) {
-        //TODO:
-        return null;
     }
 }
